[project]
name = "kidney-transport-a2a-agent"
version = "0.1.0"
description = "Kidney recipient + preservation recommendation agent (Health Universe A2A)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "health-universe-a2a>=0.2.0",
    "openai>=1.40.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
